[package]
name = "docker-mdns"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
resolver = "2"
license = "MIT OR Apache-2.0"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0"
bollard = "0.15"
futures-core = "0.3"
futures-util = "0.3"
if-addrs = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.32"
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.zbus]
version = "3.14"
default-features = false
features = [
    "tokio",
]
