[package]
name = "docker-mdns"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
resolver = "2"
license = "MIT OR Apache-2.0"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
bollard = "0.19"
futures-core = "0.3"
futures-util = "0.3"
if-addrs = "0.14"
tracing = "0.1"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.47"
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.tracing-subscriber]
version = "0.3"
features = [
    "env-filter",
]

[dependencies.zbus]
version = "5.11.0"
default-features = false
features = [
    "tokio",
]
